Fix overflow property value - #results and #video

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -234,7 +234,7 @@ p .text-yellow:hover {
     width: 100%;
     height: auto;
     object-fit: scale-down;
-    overflow: none;
+    overflow: auto;
     padding-left: 30px;
     cursor: pointer;
 }
@@ -243,7 +243,7 @@ p .text-yellow:hover {
     width: 80%;
     height: auto;
     object-fit: scale-down;
-    overflow: none;
+    overflow: auto;
 }
 
 .minus-margin {
